Delets the posts with given id Trait added to add url to image name
